--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ button {
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
- background-image: url('../images/jjj.jpg');
+ background-image: url('../zhansaya/images/jjj.jpg');
 }
 
 
